--- a/app/src/main/res/layout/layout_fragmant_login.xml
+++ b/app/src/main/res/layout/layout_fragmant_login.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
         <EditText
+            android:id="@+id/tendangnhap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Tên Đăng Nhập"
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
         <EditText
+            android:id="@+id/matkhau"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint = "Mật Khẩu" />
@@ -33,6 +35,7 @@
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/btnLogin"
         android:text="Đăng Nhập"
         android:textColor="@color/colorWhite"
         android:background="@color/colorAccent"
